# airflow-provider-truefoundry

./: README.md  pyproject.toml
truefoundry_provider/: __init__.py
truefoundry_provider/example_dags/: sample.py
truefoundry_provider/hooks/: truefoundry.py
truefoundry_provider/operators/: job_run_now.py
