[build-system]
requires = [
    "setuptools",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "airflow-provider-truefoundry"
authors = [
    { name = "Mahesh", email = "mahesh.ambule@prodigaltech.com" }

]
license = { text = "Apache License 2.0" }
description = "A True Foundry Apache Airflow provider package"
classifiers = [
    "Framework :: Apache Airflow",
    "Framework :: Apache Airflow :: Provider",
]
dynamic = [
    "version"
]
requires-python = "~=3.8"
dependencies = [
    "apache-airflow>=2.4",
    "truefoundry>=0.4.0"
]

[project.urls]
Homepage = "https://www.truefoundry.com/"
Source = "https://github.com/"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.entry-points.apache_airflow_provider]
provider_info = "truefoundry_provider.__init__:get_provider_info"

[tool.setuptools]
include-package-data = false

[tool.setuptools.dynamic]
version = { attr = "truefoundry_provider.__version__" }

[tool.setuptools.packages.find]
exclude = [
    "*tests.*",
    "*tests"
]
